[package]
name = "wave_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
chrono = "0.4.22"
walkdir = "2.3.2"
cpal = "0.14.0"
hound = "3.5.0"
aubio-rs = { version = "0.2.0", features = ["bindgen"] }
rodio = "0.16.0"
web-audio-api = "0.22.0"